# E47-Kartekeya

./: README.md  pyproject.toml
artifacts/: e47_validation_certificate.json
certificates/: e47_pipeline.json  e47_validation_summary.json  qutip_validation.json
docs/: provenance.md  validation_scope.md
notebooks/: 01-why-6-and-30-the-e47-kernel.ipynb
scripts/: generate_validation_certificate.py  su3_adjoint_singlet_validation.py  su3_symmetry_validation.py
src/e47/: __init__.py  contraction.py  mathematical_city.py  projector.py  semigroup.py  serialization.py  su2_kernel.py  su3_adjoint.py  validation_results.py
src/e47.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: kkp_paradigm.py  qutip_validation.py  recursive_evolution.py  test_qutip_validation.py  test_su3_adjoint.py  test_su3_adjoint_singlet_validation.py  three_body_classical.py
